--- a/ModuleManager.Web/Views/Module/Edit.cshtml
+++ b/ModuleManager.Web/Views/Module/Edit.cshtml
@@ -26,144 +26,98 @@
     <div id="hidden-values">
         @Html.HiddenFor(model => model.Module.CursusCode, new { @id = "cursuscode" })
         @Html.HiddenFor(model => model.Module.Schooljaar, new { @id = "schooljaar" })
+        @Html.HiddenFor(model => model.Module.Naam)
+        @Html.HiddenFor(model => model.Module.Icon)
 
-
-        <div id="hidden-leerlijnen">
-
-        </div>
-
-        <div id="hidden-voorkennis">
-        </div>
-
-        <div id="hidden-tags">
-
-        </div>
-
-        <div id="hidden-competenties">
-
-        </div>
-
-        <div id="hidden-docenten">
-
-        </div>
-
-        <div id="hidden-werkvormen">
-
-        </div>
+        <div id="hidden-leerlijnen"></div>
+        <div id="hidden-voorkennis"></div>
+        <div id="hidden-tags"></div>
+        <div id="hidden-kwaliteitskenmerken"></div>
+        <div id="hidden-docenten"></div>
+        <div id="hidden-werkvormen"></div>
     </div>
 
     <table class="table">
-        <tr>
-            <td><label for="tags">Naam</label></td>
-        </tr>
+        <tr><td><label for="tags">Naam</label></td></tr>
         <tr>
             <td>
-                <input type="text" class="form-control" id="Naam" placeholder="Naam" value="@Model.Module.Naam" disabled="disabled">
+                <input type="text" class="form-control" id="Module_Naam" placeholder="Naam" name="Module.Naam" value="@Model.Module.Naam" disabled="disabled">
             </td>
         </tr>
     </table>
-
     <table class="table">
-        <tr>
-            <td><label for="tags">Beschrijving</label></td>
-        </tr>
+        <tr><td><label for="tags">Beschrijving</label></td></tr>
         <tr>
             <td>
-                <textarea class="form-control" name="Module.Beschrijving" placeholder="Beschrijving">@Model.Module.Beschrijving</textarea>
+                @Html.TextAreaFor(m => m.Module.Beschrijving, new { @class="form-control", placeholder="Beschrijving" })
             </td>
         </tr>
     </table>
-
-
-    @{ 
-        var moduleCompetenties = Html.Raw(Json.Encode(Model.Module.ModuleCompetenties));
-        var options = Html.Raw(Json.Encode(Model.Options));
-    }
-
-    <section ng-controller="CompetentieCtrl" ng-init='init(@moduleCompetenties, @options)'>
-        <h2>Competentie</h2>
-        <table class="table">
-            <tr>
-                <td>niveau</td>
-                <td>competentie</td>
-                <td></td>
-            </tr>
-            <tr ng-repeat="comp in moduleCompetenties">
-                <td>
-                    <select name="Module.ModuleCompetenties[{{$index}}].niveau" class="form-control" ng-model="comp.Niveau">
-                        <option ng-repeat="niveau in niveaus" value="{{niveau.Niveau1}}">{{niveau.Niveau1}}</option>
-                    </select>
-                </td>
-                <td>
-                    <select name="Module.ModuleCompetenties[{{$index}}].CompetentieCode" class="form-control" ng-model="comp.CompetentieCode">
-                        <option style="display:none" value="">&lt;Kies een competentie&gt;</option>
-                        <option ng-repeat="competentie in competenties" value="{{competentie['Value']}}">
-                            {{competentie["Text"]}}
-                        </option>
-                    </select>
-                </td>
-                <td>
-                    <button ng-click="removeCompetentie($index)" class="btn btn-danger btn-sm" type="button">
-                        <i class="fa fa-trash"></i>
-                    </button>
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td style="width: 90px">
-                    <button ng-click="addCompetentie()" class="btn btn-success btn-sm" type="button">
-                        <i class="fa fa-plus"></i>
-                    </button>
-                </td>
-            </tr>
-        </table>
-    </section>
-
     <table class="table">
-        <tr>
-            <td><label>Leerlijnen</label></td>
-        </tr>
+        <tr><td><label>Leerlijnen</label></td></tr>
         <tr>
             <td>
                 @Html.DropDownList("leerlijnen", new MultiSelectList(Model.Options.Leerlijnen, "Naam", "Naam", Model.Module.Leerlijnen.Select(m => m.Naam)), new { @id = "leerlijnen", @multiple = "multiple", @class = "form-control" })
             </td>
         </tr>
     </table>
-
     <table class="table">
-        <tr>
-            <td><label for="Tags">Tags</label></td>
-        </tr>
+        <tr><td><label for="Tags">Tags</label></td></tr>
         <tr>
             <td>
                 @Html.DropDownList("Tags", new MultiSelectList(Model.Options.Tags, "Naam", "Naam", Model.Module.Tags.Select(m => m.Naam)), new { @id = "tags", @multiple = "multiple", @class = "form-control" })
             </td>
         </tr>
     </table>
-
     <table class="table">
-        <tr>
-            <td><label for="voorkennis">Voorkennis</label></td>
-        </tr>
+        <tr><td><label for="voorkennis">Voorkennis</label></td></tr>
         <tr>
             <td>
-                @Html.DropDownList("Voorkennis", new MultiSelectList(Model.Options.VoorkennisModules, "CursusCode", "Naam", Model.Module.Voorkennis.Select(m => m.Naam)), new { @id = "voorkennis", @multiple = "multiple", @class = "form-control" })
+                @Html.DropDownList("Voorkennis", new MultiSelectList(Model.Options.VoorkennisModules, "CursusCode", "Naam", Model.Module.Voorkennis.Select(m => m.CursusCode)), new { @id = "voorkennis", @multiple = "multiple", @class = "form-control" })
             </td>
         </tr>
     </table>
-
     <table class="table">
-        <tr>
-            <td><label for="docenten">Docenten</label></td>
-        </tr>
+        <tr><td><label for="docenten">Docenten</label></td></tr>
         <tr>
             <td>
                 @Html.DropDownList("Docenten", new MultiSelectList(Model.Options.Docenten, "Id", "Naam", Model.Module.Docenten.Select(m => m.Id)), new { @id = "docenten", @multiple = "multiple", @class = "form-control" })
             </td>
         </tr>
     </table>
-
+    <div class="form-group">
+        <label for="general-information">Leerdoelen</label>
+        <table class="table table-bordered table-center table-striped">
+            @for (int i = 0; i < Model.Module.Leerdoelen.Count; i++)
+            {
+                <tr>
+                    <th>
+                        <p><label>Een student kan...</label></p>
+                        <p><label>Competenties</label><br /></p>
+                    </th>
+                    <td>
+                        <p>
+                            @Html.EditorFor(item => Model.Module.Leerdoelen[i].Beschrijving, new { htmlAttributes = new { @class = "form-control" } })
+                        </p>
+                        <p>
+                            <input type="hidden" name="Module.Leerdoelen.Index" value="@i" />
+                            @Html.DropDownList("Kwaliteitskenmerken", new MultiSelectList(Model.Options.Kwaliteitskenmerken, "Id", "Omschrijving"
+                                        , Model.Module.Leerdoelen[i].Kwaliteitskenmerken.Select(kk => kk.Id))
+                                        , new { index = i, @class = "kwaliteitskenmerken form-control", @multiple = "multiple" })
+                        </p>
+                    </td>
+                    <td style="width: 90px; text-align:center">
+                        <a class="btn btn-danger btn-sm remove_row"><i class="fa fa-trash"></i></a>
+                    </td>
+                </tr>
+            }
+            <tr>
+                <td style="width: 90px; text-align:right; padding-right:30px" colspan="5">
+                    <button data-target="leerdoelen" data-columns="1" data-collectionname="Leerdoelen" data-properties='["Beschrijving"]' data-nextindex="@Model.Module.Leerdoelen.Count" class="btn btn-success row_add" type="button"><i class="fa fa-plus add_row"></i></button>
+                </td>
+            </tr>
+        </table>
+    </div>
     <div class="form-group">
         <label for="general-information">Algemene informatie</label>
         <table class="table table-bordered table-center table-striped">
@@ -203,7 +157,6 @@
                                     <tr data-type="@werkvorm.WerkvormType">
                                         <td>@Html.EditorFor(item => werkvorm.WerkvormType, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })</td>
                                         <td>@Html.EditorFor(item => werkvorm.Organisatie, new { htmlAttributes = new { @class = "form-control orgDesc" } })</td>
-
                                     </tr>
                                 }
                             </tbody>
@@ -374,41 +327,6 @@
                     </td>
                 </tr>
                 <tr>
-                    <th>Leerdoelen</th>
-                    <td>
-                        <table class="table table-bordered" id="leerdoelen">
-                            <thead>
-                                <tr>
-                                    <th>Een student kan...</th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @for (int i = 0; i < Model.Module.Leerdoelen.Count; i++)
-                                {
-                                    <tr>
-                                        <td>
-                                            @Html.EditorFor(item => Model.Module.Leerdoelen[i].Beschrijving, new { htmlAttributes = new { @class = "form-control" } })
-
-                                            <input type="hidden" name="Module.Leerdoelen.Index" value="@i" />
-                                            @Html.HiddenFor(item => Model.Module.Leerdoelen[i].CursusCode, new { htmlAttributes = new { @class = "form-control" } })
-                                            @Html.HiddenFor(item => Model.Module.Leerdoelen[i].Schooljaar, new { htmlAttributes = new { @class = "form-control" } })
-                                        </td>
-                                        <td style="width: 90px; text-align:center">
-                                            <a class="btn btn-danger btn-sm remove_row"><i class="fa fa-trash"></i></a>
-                                        </td>
-                                    </tr>
-                                }
-                                <tr>
-                                    <td style="width: 90px; text-align:right; padding-right:30px" colspan="5">
-                                        <button data-target="leerdoelen" data-columns="1" data-collectionname="Leerdoelen" data-properties='["Beschrijving"]' data-nextindex="@Model.Module.Leerdoelen.Count" class="btn btn-success row_add" type="button"><i class="fa fa-plus add_row"></i></button>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </td>
-                </tr>
-                <tr>
                     <th>Status</th>
                     <td>
                         @Html.DropDownListFor(item => item.Module.Status, selectList: Model.Options.Statussen.Select(s => new SelectListItem { Value = s.Status1, Text = s.Status1 }), htmlAttributes: new { @class = "form-control" })
@@ -498,14 +416,14 @@
             $hidden_leerlijnen = $("#hidden-leerlijnen");
             $hidden_voorkennis = $("#hidden-voorkennis");
             $hidden_tags = $("#hidden-tags");
-            $hidden_competenties = $("#hidden-competenties");
+            $hidden_kwaliteitskenmerken = $("#hidden-kwaliteitskenmerken");
             $hidden_docenten = $("#hidden-docenten");
             $hidden_werkvormen = $("#hidden-werkvormen");
 
             $hidden_leerlijnen.empty();
             $hidden_voorkennis.empty();
             $hidden_tags.empty();
-            $hidden_competenties.empty();
+            $hidden_kwaliteitskenmerken.empty();
             $hidden_werkvormen.empty();
 
             var index = 0;
@@ -579,6 +497,13 @@
             $hidden_tags.append("<input name='Module.Tags[" + index + "].Naam' type='hidden' value=" + $(selected).text() + ">");
             ++index;
         });
+
+        $(".kwaliteitskenmerken option:selected").each(function (i, selected) {
+            //debugger;
+            var parent = $(selected).parent();
+            console.log('index: ' + parent.attr('index'));
+            $hidden_kwaliteitskenmerken.append("<input name='Module.Leerdoelen[" + parent.attr("index") + "].Kwaliteitskenmerken[" + i + "].Id' type='hidden' value=" + $(selected).val() + ">");
+        });
     });
 
     $(".row_add").click(function () {
@@ -637,16 +562,29 @@
 
         $(function () {
             // SELECT2
-            $("#competenties").select2({
-                placeholder: "Competenties"
-            });
-
             $("#leerlijnen").select2({
                 placeholder: "Leerlijnen"
             });
 
             $("#tags").select2({
                 placeholder: "Tags"
+            });
+
+            function formatTags(data) {
+                var slashIndex = data.text.indexOf('/') + 1;
+                var splitIndex = data.text.indexOf(':') + 1;
+                return '<b>' + data.text.substring(0, slashIndex) + 
+                        '<i>' + data.text.substring(slashIndex, splitIndex) + '</i>' +
+                       '</b> ' + data.text.substring(splitIndex);
+            }
+
+            $(".kwaliteitskenmerken").select2({
+                placeholder: "Competenties",
+                templateSelection: formatTags,
+                templateResult: formatTags,
+                escapeMarkup: function (m) {
+                    return m;
+                }
             });
 
             $("#werkvorm").select2({
@@ -660,12 +598,6 @@
             $("#docenten").select2({
                 placeholder: "Docenten"
             })
-
-
-            @foreach (var niveau in Model.Options.Niveaus)
-            {
-                 @Html.Raw("$('#" + @niveau.Niveau1 + "-select').select2({ placeholder: 'Werkvorm' });")
-            }
         });
     </script>
 
