--- a/ModuleManager.Web/Views/Shared/_Layout.cshtml
+++ b/ModuleManager.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE HTML>
-<html ng-app="studiegidsApp">
+<html>
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
