Competenties zijn te koppelen aan leerdoelen.

--- a/ModuleManager.Web/Content/custom.css
+++ b/ModuleManager.Web/Content/custom.css
@@ -435,3 +435,6 @@ body { padding-bottom: 70px; }
 table tr.alternate {
     background-color: #f9f9f9;
 }
+.hiddenLeerdoel {
+    display: none;
+}
