--- a/ModuleManager.Web/Views/Module/Edit.cshtml
+++ b/ModuleManager.Web/Views/Module/Edit.cshtml
@@ -23,8 +23,6 @@
 }
 
 <form id="module_edit_form" action="@Url.Action("Edit", "Module", new { schooljaar = Model.Module.Schooljaar, cursusCode = Model.Module.CursusCode })" method="post">
-@using (Html.BeginForm())
-{
     <div id="hidden-values">
         @Html.HiddenFor(model => model.Module.CursusCode, new { @id = "cursuscode" })
         @Html.HiddenFor(model => model.Module.Schooljaar, new { @id = "schooljaar" })
@@ -321,13 +319,13 @@
     <button name="afterSubmit" value="stay" type="submit" class="btn btn-success btn-lg">Opslaan</button>
     <button name="afterSubmit" value="close" class="btn btn-success btn-lg">Opslaan & Sluiten</button>
     <a href="@Url.Action("Details", "Module", new { schooljaar = Model.Module.Schooljaar, cursusCode = Model.Module.CursusCode })" class="btn btn-default">Annuleren</a>
-}
+</form>
 
 <!-- Help MODAL-->
 @Html.Partial("~/Views/Help/ModuleEdit.cshtml", null)
 
 @helper LeerdoelRowTemplate(int? index = null, ModuleManager.Web.ViewModels.EntityViewModel.LeerdoelenViewModel ld = null) {
-    string indexString = index.HasValue ? index.ToString() : "<<index>>";
+string indexString = index.HasValue ? index.ToString() : "<<index>>";
 
     <tr class="leerdoelTemplate @(ld == null ? "hiddenLeerdoel" : "")">
         <th>
@@ -342,11 +340,11 @@
                 @if (ld != null)
                 {
                     @Html.DropDownList("Kwaliteitskenmerken", new MultiSelectList(Model.Options.Kwaliteitskenmerken, "Id", "Omschrijving"
-                                                 , Model.Module.Leerdoelen[index.Value].Kwaliteitskenmerken.Select(kk => kk.Id))
-                                                 , new { @class = "kwaliteitskenmerken form-control", @multiple = "multiple" })
+                                          , Model.Module.Leerdoelen[index.Value].Kwaliteitskenmerken.Select(kk => kk.Id))
+                                          , new { @class = "kwaliteitskenmerken form-control", @multiple = "multiple" })
                 }
-                    else
-                    {
+                else
+                {
                     <select class="kwaliteitskenmerken form-control" id="Kwaliteitskenmerken" multiple="multiple" name="Kwaliteitskenmerken">
                         @foreach (var kk in Model.Options.Kwaliteitskenmerken)
                         {
