--- a/ModuleManager.Web/Views/Competenties/_Edit.cshtml
+++ b/ModuleManager.Web/Views/Competenties/_Edit.cshtml
@@ -10,7 +10,7 @@
     <div class="modal-body">
         @Html.AntiForgeryToken()
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Code)
             @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
             @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
@@ -26,7 +26,7 @@
             @Html.LabelFor(model => model.Beschrijving)
             @Html.TextAreaFor(model => model.Beschrijving, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Beschrijving, "", new { @class = "text-danger" })
-        </div>
+        </div>*@
 
     </div>
     <div class="modal-footer">
